@@ -1,3 +1,11 @@
+2014-08-18  Brent Fulgham  <bfulgham@apple.com>
+
+        [Mac] Unreviewed merge correction.
+
+        * page/mac/EventHandlerMac.mm:
+        (WebCore::EventHandler::platformCompleteWheelEvent): Revert an
+        unintended change from r172705.
+
 2014-08-18  Bem Jones-Bey  <bjonesbe@adobe.com>
 
         Small cleanup for ShapeOutsideDeltas
